trunk/Archive2/1b/c5f18c6c67fd9c/output
main.cpp:119:51: error: expected ';' after expression
            std::cout << "Parsed: " << emp << "\n"
                                                  ^
                                                  ;
1 error generated.
